--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,6 +4,7 @@
     <dimen name="vertical_padding">8dp</dimen>
     <dimen name="horizontal_margin">14dp</dimen>
     <dimen name="vertical_margin">14dp</dimen>
+    <dimen name="loading_progress_bar_size">30dp</dimen>
     <dimen name="normal_text_size">14sp</dimen>
     <dimen name="medium_text_size">16sp</dimen>
 </resources>
