--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="small_padding">5dp</dimen>
     <dimen name="horizontal_padding">14dp</dimen>
     <dimen name="vertical_padding">8dp</dimen>
     <dimen name="horizontal_margin">14dp</dimen>
@@ -7,4 +8,6 @@
     <dimen name="loading_progress_bar_size">30dp</dimen>
     <dimen name="normal_text_size">14sp</dimen>
     <dimen name="medium_text_size">16sp</dimen>
+    <dimen name="thumbnail_image_width">60dp</dimen>
+    <dimen name="thumbnail_image_min_height">40dp</dimen>
 </resources>
