--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,7 +25,7 @@
         android:layout_marginTop="@dimen/vertical_margin">
 
         <com.mannguyen.androidtest.widgets.CustomRecyclerView
-            android:id="@+id/rvBookVolumes"
+            android:id="@+id/rvVolumes"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
