--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,19 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvError"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingStart="@dimen/horizontal_padding"
+            android:paddingTop="@dimen/vertical_padding"
+            android:paddingEnd="@dimen/horizontal_padding"
+            android:paddingBottom="@dimen/vertical_padding"
+            android:textColor="@color/black"
+            android:textSize="@dimen/medium_text_size"
+            android:visibility="gone" />
+
         <View
             android:id="@+id/vCover"
             android:layout_width="match_parent"
