--- a/app/src/main/res/layout/activity_volume_detail.xml
+++ b/app/src/main/res/layout/activity_volume_detail.xml
@@ -1,9 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/refreshLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.VolumeDetailActivity">
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <FrameLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.core.widget.NestedScrollView
+            android:id="@+id/content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="vertical">
+
+                <ImageView
+                    android:id="@+id/imgThumbnail"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:minHeight="@dimen/cover_image_min_height"
+                    tools:ignore="ContentDescription" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvTitle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/horizontal_padding"
+                    android:paddingTop="@dimen/vertical_padding"
+                    android:paddingEnd="@dimen/horizontal_padding"
+                    android:paddingBottom="@dimen/vertical_padding"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/medium_text_size"
+                    android:textStyle="bold" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvAuthors"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:textColor="@color/black"
+                    android:paddingStart="@dimen/horizontal_padding"
+                    android:paddingTop="@dimen/vertical_padding"
+                    android:paddingEnd="@dimen/horizontal_padding"
+                    android:paddingBottom="@dimen/vertical_padding"
+                    android:textSize="@dimen/normal_text_size" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvPublisher"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/horizontal_padding"
+                    android:paddingEnd="@dimen/horizontal_padding"
+                    android:textColor="@color/black"
+                    android:textSize="@dimen/small_text_size" />
+
+                <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/tvDescription"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:paddingStart="@dimen/horizontal_padding"
+                    android:paddingTop="@dimen/vertical_padding"
+                    android:paddingEnd="@dimen/horizontal_padding"
+                    android:paddingBottom="@dimen/vertical_padding"
+                    android:textSize="@dimen/normal_text_size" />
+
+            </LinearLayout>
+
+        </androidx.core.widget.NestedScrollView>
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/tvError"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:paddingStart="@dimen/horizontal_padding"
+            android:paddingTop="@dimen/vertical_padding"
+            android:paddingEnd="@dimen/horizontal_padding"
+            android:paddingBottom="@dimen/vertical_padding"
+            android:textColor="@color/black"
+            android:textSize="@dimen/medium_text_size"
+            android:visibility="gone" />
+
+    </FrameLayout>
+
+</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
