--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -6,8 +6,10 @@
     <dimen name="horizontal_margin">14dp</dimen>
     <dimen name="vertical_margin">14dp</dimen>
     <dimen name="loading_progress_bar_size">30dp</dimen>
+    <dimen name="small_text_size">12sp</dimen>
     <dimen name="normal_text_size">14sp</dimen>
     <dimen name="medium_text_size">16sp</dimen>
     <dimen name="thumbnail_image_width">60dp</dimen>
     <dimen name="thumbnail_image_min_height">40dp</dimen>
+    <dimen name="cover_image_min_height">100dp</dimen>
 </resources>
