--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,6 +34,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:gravity="center"
             android:paddingStart="@dimen/horizontal_padding"
             android:paddingTop="@dimen/vertical_padding"
             android:paddingEnd="@dimen/horizontal_padding"
