--- a/app/src/main/res/layout/activity_volume_detail.xml
+++ b/app/src/main/res/layout/activity_volume_detail.xml
@@ -44,11 +44,11 @@
                     android:id="@+id/tvAuthors"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:textColor="@color/black"
                     android:paddingStart="@dimen/horizontal_padding"
                     android:paddingTop="@dimen/vertical_padding"
                     android:paddingEnd="@dimen/horizontal_padding"
                     android:paddingBottom="@dimen/vertical_padding"
+                    android:textColor="@color/black"
                     android:textSize="@dimen/normal_text_size" />
 
                 <androidx.appcompat.widget.AppCompatTextView
@@ -79,6 +79,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
+            android:gravity="center"
             android:paddingStart="@dimen/horizontal_padding"
             android:paddingTop="@dimen/vertical_padding"
             android:paddingEnd="@dimen/horizontal_padding"
