--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,6 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:padding="@dimen/horizontal_padding">
 
@@ -24,8 +25,9 @@
         android:layout_height="match_parent"
         android:layout_marginTop="@dimen/vertical_margin">
 
-        <com.mannguyen.androidtest.widgets.CustomRecyclerView
+        <com.mannguyen.androidtest.widgets.HasScrolledToBottomActionRecyclerView
             android:id="@+id/rvVolumes"
+            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             android:layout_width="match_parent"
             android:layout_height="match_parent" />
 
