--- a/app/src/main/res/layout/item_volume.xml
+++ b/app/src/main/res/layout/item_volume.xml
@@ -2,42 +2,53 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:layout_marginBottom="2dp"
     android:background="?attr/selectableItemBackground"
     android:clickable="true"
     android:focusable="true"
-    android:orientation="horizontal"
-    android:padding="@dimen/small_padding">
-
-    <androidx.appcompat.widget.AppCompatImageView
-        android:id="@+id/imgThumbnail"
-        android:layout_width="@dimen/thumbnail_image_width"
-        android:minHeight="@dimen/thumbnail_image_min_height"
-        android:layout_height="wrap_content"
-        android:adjustViewBounds="true" />
+    android:orientation="horizontal">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:paddingStart="@dimen/horizontal_padding"
-        android:paddingEnd="@dimen/horizontal_padding">
+        android:background="@color/white"
+        android:padding="@dimen/small_padding">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvTitle"
+        <androidx.appcompat.widget.AppCompatImageView
+            android:id="@+id/imgThumbnail"
+            android:layout_width="@dimen/thumbnail_image_width"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:minHeight="@dimen/thumbnail_image_min_height" />
+
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:textColor="@color/black"
-            android:textSize="@dimen/medium_text_size" />
+            android:orientation="vertical"
+            android:paddingStart="@dimen/horizontal_padding"
+            android:paddingEnd="@dimen/horizontal_padding">
 
-        <androidx.appcompat.widget.AppCompatTextView
-            android:id="@+id/tvDescription"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:ellipsize="end"
-            android:maxLines="2"
-            android:paddingTop="@dimen/vertical_padding"
-            android:paddingBottom="@dimen/vertical_padding"
-            android:textSize="@dimen/normal_text_size" />
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:textColor="@color/black"
+                android:textSize="@dimen/medium_text_size"
+                android:textStyle="bold" />
+
+            <androidx.appcompat.widget.AppCompatTextView
+                android:id="@+id/tvDescription"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:ellipsize="end"
+                android:maxLines="2"
+                android:paddingTop="@dimen/vertical_padding"
+                android:paddingBottom="@dimen/vertical_padding"
+                android:textSize="@dimen/normal_text_size" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
