--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="line_margin">2dp</dimen>
     <dimen name="small_padding">5dp</dimen>
+    <dimen name="medium_padding">10dp</dimen>
     <dimen name="horizontal_padding">14dp</dimen>
     <dimen name="vertical_padding">8dp</dimen>
     <dimen name="horizontal_margin">14dp</dimen>
@@ -11,5 +13,5 @@
     <dimen name="medium_text_size">16sp</dimen>
     <dimen name="thumbnail_image_width">60dp</dimen>
     <dimen name="thumbnail_image_min_height">40dp</dimen>
-    <dimen name="cover_image_min_height">100dp</dimen>
+    <dimen name="cover_image_min_height">200dp</dimen>
 </resources>
